Fixed layout issue with tick overlapping text, moved drop arrow to the left as it looks better

--- a/bootstrap-select.css
+++ b/bootstrap-select.css
@@ -1,56 +1,56 @@
 .clearfix:after {
-	visibility: hidden;
-	display: block;
-	font-size: 0;
-	content: " ";
-	clear: both;
-	height: 0;
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
 }
 .bootstrap-select.btn-group, .bootstrap-select.btn-group[class*="span"] {
-	float:none; 
-	display: inline-block;
-	margin-bottom: 10px;
-	margin-left:0;
+    float:none; 
+    display: inline-block;
+    margin-bottom: 10px;
+    margin-left:0;
 }
 .bootstrap-select {width: 220px;}
 .bootstrap-select .btn {width: 220px;}
 .bootstrap-select .btn:focus {
-	outline: thin dotted #333333 !important;
-	outline: 5px auto -webkit-focus-ring-color !important;
-	outline-offset: -2px;
+    outline: thin dotted #333333 !important;
+    outline: 5px auto -webkit-focus-ring-color !important;
+    outline-offset: -2px;
 }
 .bootstrap-select.btn-group .btn .filter-option {
-	overflow:hidden; 
-	position:absolute;
-	left:12px; 
-	right:25px;
-	text-align:left;
+    overflow:hidden; 
+    position:absolute;
+    left:12px; 
+    right:25px;
+    text-align:left;
 }
 .bootstrap-select.btn-group .btn .caret {
-	position:absolute;
-	right:12px;
+    position:absolute;
+    right:12px;
 }
 .bootstrap-select.btn-group > .disabled, .bootstrap-select.btn-group .dropdown-menu li.disabled > a {cursor: not-allowed;}
 .bootstrap-select.btn-group[class*="span"] .btn {
-	width:100%;
+    width:100%;
 }
 .bootstrap-select.btn-group .dropdown-menu {
-	min-width:100%;
-	-moz-box-sizing:border-box;
-	-webkit-box-sizing:border-box;
-	box-sizing:border-box;
+    min-width:100%;
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+    box-sizing:border-box;
 }
 .bootstrap-select.btn-group .dropdown-menu dt {
-	display:block; 
-	padding:3px 20px; 
-	cursor:default;
+    display:block; 
+    padding:3px 20px; 
+    cursor:default;
 }
 .bootstrap-select.btn-group .div-contain {overflow:hidden;}
 .bootstrap-select.btn-group .dropdown-menu li > a.opt {padding-left:35px;}
 .bootstrap-select.btn-group .dropdown-menu li > a {min-height:20px;}
 
-.bootstrap-select.btn-group.show-tick .dropdown-menu li.selected a i.check-mark { display:inline-block; }
-.bootstrap-select.btn-group .dropdown-menu li a i.check-mark { display:none; }
+.bootstrap-select.btn-group.show-tick .dropdown-menu li.selected a i.check-mark { visibility: visible; display:inline-block; margin-left:20px;}
+.bootstrap-select.btn-group .dropdown-menu li a i.check-mark { visibility:hidden; margin-left:20px;}
 
 
 
@@ -61,8 +61,7 @@
 .bootstrap-select.btn-group.show-menu-arrow .dropdown-menu::after {
   position: absolute;
   top: -6px;
-  left: auto;
-  right:10px;
+  left: 10px;
   display: inline-block;
   border-right: 6px solid transparent;
   border-bottom: 6px solid white;
@@ -73,8 +72,7 @@
 .bootstrap-select.btn-group.show-menu-arrow .dropdown-menu::before {
     position: absolute;
     top: -7px;
-    left: auto;
-    right: 9px;
+    left: 9px;
     display: inline-block;
     border-right: 7px solid transparent;
     border-bottom: 7px solid #CCC;
